# update_logic_clean_code

./: .gitignore  Cargo.toml
benches/: update_benchmarks.rs
resources/test/: bad_test_private_key.pem  bad_test_public_key.pem  test_lb_cfg.json  test_private_key.pem  test_public_key.pem
src/: crypto.rs  lib.rs  memory.rs  multi_threaded_update.rs  reporting.rs  sequential_update.rs  software_archive.rs
src/async_update/: logical_blocks.rs  memory.rs  software_archive.rs  update_sequence.rs
src/multi_threaded_update/: logical_blocks.rs  memory.rs  software_archive.rs  update_sequence.rs
src/sequential_update/: crypto.rs  memory.rs  software_archive.rs  update_sequence.rs
