[package]
name = "update_logic_clean_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
memmap2 = "0.7.1"
minidom = "0.15.1"
openssl = { version = "0.10.46", features = ["v111"] }
piz = "0.5.1"
rayon = "1.7.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.29.1", features = ["full"] }
zip = "0.6.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "update_benchmarks"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
